--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "react-apexcharts": "^1.3.7",
         "react-dom": "^17.0.1",
         "react-pro-sidebar": "^0.5.0",
+        "react-redux": "^7.2.4",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.1",
         "react-select": "^4.2.1",
         "react-snackbar-alert": "^2.1.0",
