--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,24 +7,24 @@
 api_login_check:
     path: /api/login_check
     
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+# fos_user_security:
+#     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
+# fos_user_profile:
+#     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+#     prefix: /profile
 
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
+# fos_user_register:
+#     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#     prefix: /register
 
-fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
+# fos_user_resetting:
+#     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+#     prefix: /resetting
 
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
+# fos_user_change_password:
+#     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+#     prefix: /profile
     
-fos_js_routing:
-    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing-sf4.xml"
+# fos_js_routing:
+#     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing-sf4.xml"
